--- a/client/my-sites/plans-features-main/style.scss
+++ b/client/my-sites/plans-features-main/style.scss
@@ -102,7 +102,7 @@
 	width: unset;
 
 	@include plans-section-custom-mobile-breakpoint {
-		margin: 0 0 24px;
+		margin: 24px 0;
 		width: 100%;
 	}
 }
