--- a/client/my-sites/plans/current-plan/style.scss
+++ b/client/my-sites/plans/current-plan/style.scss
@@ -1,5 +1,5 @@
-.current-plan main {
-	padding-top: 24px;
+.current-plan__content .navigation {
+	margin-bottom: 24px;
 }
 
 .current-plan__dialog.dialog__backdrop {
