--- a/client/my-sites/plans-features-main/style.scss
+++ b/client/my-sites/plans-features-main/style.scss
@@ -28,18 +28,18 @@
 		width: auto;
 	}
 
-	.is-section-stepper &,
-	.is-section-signup & {
-		@include plan-features-layout-switcher;
-	}
+	// .is-section-stepper &,
+	// .is-section-signup & {
+	// 	@include plan-features-layout-switcher;
+	// }
 
-	.is-section-plans:not(.is-sidebar-collapsed) & {
-		@include plan-features-layout-switcher-with-sidebar;
-	}
+	// .is-section-plans:not(.is-sidebar-collapsed) & {
+	// 	@include plan-features-layout-switcher-with-sidebar;
+	// }
 
-	.is-section-plans.is-sidebar-collapsed & {
-		@include plan-features-layout-switcher;
-	}
+	// .is-section-plans.is-sidebar-collapsed & {
+	// 	@include plan-features-layout-switcher;
+	// }
 
 	.signup__steps .plans-features-main__group.is-scrollable & {
 		max-width: 100%;
@@ -52,24 +52,23 @@
 
 		@include plans-2023-break-small {
 			padding-top: 35px; // enough to cover `plans-grid__popular-badge` repositioning (top: -35px)
-			margin: 0;
 		}
 
-		@include plans-2023-break-medium {
-			margin: 0 20px;
-		}
+		// @include plans-2023-break-medium {
+		// 	margin: 0 20px;
+		// }
 
-		@include plans-section-break-medium {
-			margin: 0;
-		}
+		// @include plans-section-break-medium {
+		// 	margin: 0;
+		// }
 
-		@include plans-2023-break-medium {
-			margin: 0 20px;
-		}
+		// @include plans-2023-break-medium {
+		// 	margin: 0 20px;
+		// }
 
-		@include plans-section-break-medium {
-			margin: 0;
-		}
+		// @include plans-section-break-medium {
+		// 	margin: 0;
+		// }
 	}
 }
 
