Add button, actions, reducers to support auto-renew toggle

--- a/client/me/purchases/remove-purchase/style.scss
+++ b/client/me/purchases/remove-purchase/style.scss
@@ -1,4 +1,5 @@
-.remove-purchase__card {
+.remove-purchase__card,
+.auto-renew-toggle__card {
 	margin: 10px auto;
 	width: 100%;
 	color: var(--color-link);
