--- a/client/jetpack-cloud/sections/pricing/style.scss
+++ b/client/jetpack-cloud/sections/pricing/style.scss
@@ -1,6 +1,7 @@
 @import "../shared-style.scss";
 
-.is-group-jetpack-cloud.is-section-jetpack-cloud-pricing {
+.is-group-jetpack-cloud.is-section-jetpack-cloud-pricing,
+.is-group-jetpack-cloud.is-section-jetpack-cloud-manage-pricing {
 
 	@include jetpack-cloud-sections-shared-styles();
 
