css media query refactors

--- a/packages/plans-grid-next/src/style.scss
+++ b/packages/plans-grid-next/src/style.scss
@@ -8,13 +8,13 @@ $mobile-card-max-width: 440px;
 	margin-top: 300px;
 }
 
-// .plans-grid-next__features-grid {
-// 	display: none;
+.plans-grid-next__features-grid {
+	display: none;
 
-// 	&.is-visible {
-// 		display: block;
-// 	}
-// }
+	&.is-visible {
+		display: block;
+	}
+}
 
 .plan-features-2023-grid__header {
 	display: flex;
