chore: fix mobile title width

--- a/client/me/developer/style.scss
+++ b/client/me/developer/style.scss
@@ -9,6 +9,7 @@
 		letter-spacing: 0.2px;
 		text-align: center;
 		padding-bottom: 8px;
+		word-break: break-word;
 	}
 
 	.formatted-header__subtitle {
