--- a/client/my-sites/checkout/src/components/jetpack-akismet-checkout-sidebar-plan-upsell/style.scss
+++ b/client/my-sites/checkout/src/components/jetpack-akismet-checkout-sidebar-plan-upsell/style.scss
@@ -1,23 +1,46 @@
 .checkout-sidebar-plan-upsell.jetpack {
+	background-color: var(--studio-jetpack-green-0);
+	border: solid 1px var(--studio-jetpack-green);
+	border-radius: 2px;
+
 	.action-panel__title,
-	strong,
 	div {
 		color: var(--studio-gray-80);
 	}
 
+	.checkout-sidebar-plan-upsell__separator {
+		margin: 0.75rem 0;
+		width: 100%;
+		background-color: var(--studio-gray-10);
+	}
+
 	.checkout-sidebar-plan-upsell__plan-grid {
-		grid-template-columns: 1fr 1fr;
+		grid-template-columns: 2fr 1fr;
+		grid-template-rows: auto;
 
 		> div {
 			border-top: none;
 		}
+
+		.checkout-sidebar-plan-upsell__plan-grid-cell {
+			&.section-bold,
+			&.section-discount {
+				font-weight: 600;
+			}
+			&.section-discount {
+				color: var(--studio-jetpack-green);
+			}
+		}
 	}
 
-	.checkout-sidebar-plan-upsell__plan-grid-cell.section-title {
-		border-bottom: 1px solid #ccc;
+	.action-panel__title {
+		text-align: center;
+		font-weight: 600;
+		font-size: 1.5rem;
+	}
 
-		:not(:first-child) {
-			padding-top: 0.75rem;
-		}
+	.promo-card__cta-button {
+		color: var(--studio-gray-80);
+		border-color: var(--studio-gray-80);
 	}
 }
