style: background from var

--- a/client/me/developer/style.scss
+++ b/client/me/developer/style.scss
@@ -37,7 +37,7 @@
 
 .form-fieldset.developer__is_dev_account-fieldset {
 	border-radius: 2px;
-	background: #e5f4ff;
+	background: var(--color-link-0);
 	padding: 16px;
 	text-align: center;
 
