--- a/client/blocks/importer/wordpress/import-everything/migration-error/style.scss
+++ b/client/blocks/importer/wordpress/import-everything/migration-error/style.scss
@@ -1,5 +1,22 @@
+.migration-error--title {
+	margin-bottom: 2.5rem !important;
+}
+
 .migration-error--hint {
 	text-align: start;
+	max-width: 800px;
+	margin-left: auto;
+	margin-right: auto;
+
+	a,
+	a:visited {
+		color: inherit;
+		text-decoration: underline;
+
+		&:hover {
+			text-decoration: none;
+		}
+	}
 
 	p {
 		margin-bottom: 1rem;
