Cover 'source_site_multisite' error message

--- a/client/blocks/importer/wordpress/import-everything/migration-error/style.scss
+++ b/client/blocks/importer/wordpress/import-everything/migration-error/style.scss
@@ -2,6 +2,10 @@
 	margin-bottom: 2.5rem !important;
 }
 
+.migration-error--subtitle {
+	max-width: 760px !important;
+}
+
 .migration-error--hint {
 	text-align: start;
 	max-width: 800px;
