Adding new UI to promote button (#86776)
* Adding new UI to promote button

* Fixing Github comments

* Removing unnecessary !importan property from promote button

---------

Co-authored-by: Ernesto Sánchez Kuri <ernesto.sanchez@automattic.com>

--- a/client/my-sites/promote-post-i2/components/post-item/style.scss
+++ b/client/my-sites/promote-post-i2/components/post-item/style.scss
@@ -113,6 +113,9 @@ body.is-section-promote-post-i2 {
 
 		&__post-promote-button {
 			border-radius: 4px;
+			border: 1.5px solid var(--color-accent);
+			color: var(--color-accent);
+			background-color: var(--color-surface);
 		}
 	}
 
