Adding logic to handle Woo Products table (#86674)
* Adding new filter UI for woo products

* Adding new flag and making new filter UI functional

* Making filters UI functional

* Improving code and unifying woo and blog's postType

* Fixing UI issues

* Fixing UI issues on filters UI

* Fixing UI issue: wrong spacing between dropdown and segmented control

* Fixing Github comments for filter UI

* Adding new logic to handle Products table

* Fixing issue with missing column on products table

* Adding mobile support to products table

* Removing unnecessary code

* Fixing Github comments

* Fixing Github comments

* Fixing Github comments

* Fixing issue with wrong data values order

* Fixing issue with SKU placeholder

* Fixing issue with SKU placeholder

---------

Co-authored-by: Ernesto Sánchez Kuri <ernesto.sanchez@automattic.com>

--- a/client/my-sites/promote-post-i2/components/post-item/style.scss
+++ b/client/my-sites/promote-post-i2/components/post-item/style.scss
@@ -27,7 +27,9 @@ body.is-section-promote-post-i2 {
 		&-likes,
 		&-comments,
 		&-view,
-		&-promote {
+		&-promote,
+		&-sku,
+		&-price {
 			vertical-align: middle;
 		}
 
@@ -87,6 +89,16 @@ body.is-section-promote-post-i2 {
 			color: $studio-simplenote-blue-50;
 			text-decoration-line: underline;
 			width: 5.4%;
+		}
+
+		&-price {
+			font-size: 0.875rem;
+			width: 10%;
+		}
+
+		&-sku {
+			font-size: 0.875rem;
+			width: 10%;
 		}
 	}
 
@@ -179,6 +191,9 @@ body.is-section-promote-post-i2 {
 			&-likes,
 			&-comments,
 			&-view,
+			&-sku,
+			&-price,
+			&-visitors,
 			&-promote {
 				display: none;
 			}
