Revert "Checkout: Fix height differences between payment method buttons"

--- a/client/jetpack-cloud/sections/partner-portal/primary/payment-method-add/style.scss
+++ b/client/jetpack-cloud/sections/partner-portal/primary/payment-method-add/style.scss
@@ -70,8 +70,10 @@
 			padding: 0;
 		}
 
-		.checkout-submit-button button {
-			border-radius: var(--jetpack-corners-soft);
+		button {
+			&.checkout-button {
+				border-radius: var(--jetpack-corners-soft);
+			}
 		}
 	}
 
