Add bottom margin around cards.

--- a/client/my-sites/stats/stats-purchase/styles.scss
+++ b/client/my-sites/stats/stats-purchase/styles.scss
@@ -520,6 +520,8 @@ $button-padding: 8px 32px;
 }
 
 .stats-purchase-wizard--single {
+	margin-bottom: 24px;
+
 	h1 {
 		font-family: $font-sf-pro-display;
 		font-size: $font-headline-small;
