--- a/client/my-sites/stats/stats-purchase/styles.scss
+++ b/client/my-sites/stats/stats-purchase/styles.scss
@@ -548,3 +548,15 @@ $button-padding: 8px 32px;
 		margin: 0;
 	}
 }
+
+.stats-purchase-single__personal-checklist-button {
+	.components-button {
+		&.is-secondary {
+			&[disabled],
+			&:disabled,
+			&.disabled {
+				box-shadow: inset 0 0 0 1px var(--color-neutral-5);
+			}
+		}
+	}
+}
