--- a/client/my-sites/plugins/plugins-discovery-page/style.scss
+++ b/client/my-sites/plugins/plugins-discovery-page/style.scss
@@ -1,3 +1,6 @@
+@import "@wordpress/base-styles/breakpoints";
+@import "@wordpress/base-styles/mixins";
+
 .plugins-discovery-page__upsell.card.banner.upsell-nudge {
 	background-color: #f0f7fc;
 	border: none;
@@ -15,6 +18,12 @@
 		background-color: #0675c4;
 	}
 
+	.banner__action {
+		@include break-mobile {
+			display: flex;
+		}
+	}
+
 	.banner__action .button {
 		background-color: #0675c4;
 		font-weight: 400;
@@ -22,5 +31,16 @@
 		padding: 8px 14px;
 		font-size: 0.875rem;
 		line-height: 22px;
+	}
+
+	.banner__action .button:not(:first-child) {
+		margin-top: 15px;
+		background-color: var(--color-surface);
+		border: 1px solid var(--color-neutral-10);
+
+		@include break-mobile {
+			margin-left: 12px;
+			margin-top: 0;
+		}
 	}
 }
