Woo Express: Add Padding to Free Trial Expired Page

--- a/client/my-sites/plans/ecommerce-trial/ecommerce-trial-expired/style.scss
+++ b/client/my-sites/plans/ecommerce-trial/ecommerce-trial-expired/style.scss
@@ -54,7 +54,7 @@ body.is-section-plans.is-expired-ecommerce-trial-plan {
 		justify-content: center;
 		margin: auto;
 		max-width: 800px;
-		padding-top: 1.5em;
+		padding: 1.5em;
 
 		@media ( min-width: $break-small ) {
 			flex-direction: row;
