Add missing links and adjust subtitle link style

--- a/client/blocks/importer/wordpress/import-everything/migration-error/style.scss
+++ b/client/blocks/importer/wordpress/import-everything/migration-error/style.scss
@@ -12,6 +12,17 @@
 	margin-left: auto;
 	margin-right: auto;
 
+	p {
+		margin-bottom: 1rem;
+	}
+
+	ol {
+		margin-left: 1.5em;
+	}
+}
+
+.migration-error--subtitle,
+.migration-error--hint {
 	a,
 	a:visited {
 		color: inherit;
@@ -20,13 +31,5 @@
 		&:hover {
 			text-decoration: none;
 		}
-	}
-
-	p {
-		margin-bottom: 1rem;
-	}
-
-	ol {
-		margin-left: 1.5em;
 	}
 }
