Handle smaller viewports

--- a/client/my-sites/comments/style.scss
+++ b/client/my-sites/comments/style.scss
@@ -9,10 +9,8 @@
 		}
 
 		.comment-navigation__open-bulk {
-			padding-top: 9px;
-			position: absolute;
-			right: 0;
-			top: 0;
+			justify-content: center;
+			padding-top: 0;
 		}
 	}
 }
