--- a/client/me/developer/style.scss
+++ b/client/me/developer/style.scss
@@ -40,6 +40,8 @@
 	background: var(--color-link-0);
 	padding: 16px;
 	text-align: center;
+	max-width: 750px;
+	margin: 0 auto 30px;
 
 	.components-toggle-control {
 		font-family: $font-sf-pro-text;
@@ -76,6 +78,7 @@
 		margin-bottom: 0;
 		text-align: left;
 		padding: 16px 32px;
+		z-index: 2;
 	}
 }
 
