SSH step: add subtitle

--- a/client/blocks/import/style/base.scss
+++ b/client/blocks/import/style/base.scss
@@ -41,6 +41,10 @@
 			font-size: inherit;
 			text-decoration: underline;
 		}
+
+		&.onboarding-subtitle--full-width {
+			max-width: 100%;
+		}
 	}
 
 	.import__header {
