--- a/packages/plans-grid-next/src/style.scss
+++ b/packages/plans-grid-next/src/style.scss
@@ -907,6 +907,7 @@ body.is-section-signup.is-white-signup,
 				color: unset;
 				margin-bottom: 0;
 			}
+			text-wrap: pretty;
 		}
 
 		&:not(.has-feature):not(.has-conditional-feature) {
