Bring back the following-manage__search-followed styles

--- a/client/reader/stream/style.scss
+++ b/client/reader/stream/style.scss
@@ -962,3 +962,12 @@
 	margin-top: 0;
 }
 
+.following-manage__search-followed {
+	margin-left: 0;
+}
+
+.following-manage__search-followed-input {
+	@include breakpoint-deprecated( ">960px" ) {
+		min-width: 200px;
+	}
+}
