Fixing license bar styling for mobiles

--- a/client/jetpack-cloud/sections/manage/pricing/pricing-license-selector/style.scss
+++ b/client/jetpack-cloud/sections/manage/pricing/pricing-license-selector/style.scss
@@ -15,16 +15,17 @@
 		border-radius: 8px; /* stylelint-disable-line scales/radii */
 		width: 682px;
 		height: 30px;
-		overflow: hidden;
 		margin: 20px auto;
 		padding: 1px 2px;
+		flex-wrap: nowrap;
+		overflow: auto;
 	}
 
 	.pricing-license-option-outer {
 		justify-content: center; /* Centers the inner div horizontally */
 		align-items: center; /* Centers the inner div vertically */
 		display: flex;
-		flex: 1;
+		flex: 0 0 auto;
 		width: 113px;
 		height: 30px;
 
