--- a/client/blocks/importer/wordpress/import-everything/import-users/style.scss
+++ b/client/blocks/importer/wordpress/import-everything/import-users/style.scss
@@ -1,7 +1,18 @@
+@import "@automattic/typography/styles/variables";
+@import "@wordpress/base-styles/breakpoints";
+@import "@wordpress/base-styles/mixins";
+
 .import__user-migration {
+	.onboarding-subtitle {
+		a {
+			color: var(--studio-gray-60);
+			text-decoration: underline;
+		}
+	}
+	
 	.import__user-migration-list {
 		margin: 0 auto;
-		width: 385px;
+		width: 450px;
 	}
 
 	.import__user-migration-button-container {
@@ -9,12 +20,24 @@
 		flex-direction: row;
 		justify-content: center;
 	}
+
+	.import__user-migration-footer {
+		font-size: 0.75rem;
+		margin: 1rem auto 0 auto;
+		text-align: center;
+		width: 261px;
+	}
 }
 
-.imported-user-item {
+.card.imported-user-item {
 	display: flex;
 	align-items: center;
 	box-shadow: none;
+	padding: 16px 0 16px 0;
+
+	@include break-mobile {
+		padding: 20px 0 20px 0;
+	}
 
 	.imported-user-item__display-name {
 		font-size: 1rem;
@@ -22,7 +45,9 @@
 	}
 
 	.imported-user-item__email {
+		color: var( --studio-gray-60, #50575e );
 		flex-grow: 1;
+		font-size: 0.875rem;
 	}
 
 	.imported-user-item__linked {
@@ -34,31 +59,31 @@
 		margin-left: auto;
 
 		.imported-user-item__role {
-			background: var(--color-surface);
-			border: 1px solid var(--color-neutral-light);
+			background: var( --color-surface );
+			border: 1px solid var( --color-neutral-light );
 			border-radius: 2px;
-			color: var(--color-text-subtle);
+			color: var( --color-text-subtle );
 			font-size: 0.75rem;
 			margin-left: 8px;
 			padding: 2px 6px;
 			white-space: pre;
 
 			&.role-super-admin {
-				background: var(--color-error);
+				background: var( --color-error );
 				border: none;
-				color: var(--color-text-inverted);
+				color: var( --color-text-inverted );
 			}
 
 			&.role-administrator,
 			&.role-admin-owner {
-				background: var(--color-neutral-70);
+				background: var( --color-neutral-70 );
 				border: none;
-				color: var(--color-text-inverted);
+				color: var( --color-text-inverted );
 			}
 		}
 	}
 }
 
 .imported-user-item + .imported-user-item {
-	border-top: 1px solid var(--studio-gray-5, #dcdcde);
+	border-top: 1px solid var( --studio-gray-5, #dcdcde );
 }
