Add better label to the csv column selector

--- a/client/jetpack-cloud/sections/agency-dashboard/connect-url/style.scss
+++ b/client/jetpack-cloud/sections/agency-dashboard/connect-url/style.scss
@@ -78,6 +78,6 @@
 	}
 }
 
-.connect-url-csv-column-confirmation__column-card {
-	margin-bottom: 1px;
+.connect-url-csv-column-confirmation__column-picker {
+	display: flex;
 }
