--- a/client/my-sites/plans/jetpack-plans/product-store/simple-item-card/style.scss
+++ b/client/my-sites/plans/jetpack-plans/product-store/simple-item-card/style.scss
@@ -5,6 +5,43 @@
 	display: flex;
 	flex-direction: row;
 
+	.multiple-choice-question {
+		margin-block-start: 0;
+		margin-block-end: 8px;
+
+		.form-legend {
+			display: none;
+		}
+
+		.multiple-choice-question__answers {
+			display: flex;
+			gap: 24px;
+		}
+
+		.multiple-choice-question__answer-item-content {
+			margin: 0;
+		}
+
+		.form-radio {
+			margin: 2px 0 0;
+			line-height: 1.5;
+		}
+
+		.form-label {
+			font-size: $font-body-small;
+			line-height: 1.5;
+			margin: 0;
+		}
+
+		.form-radio:checked::before {
+			background: var(--studio-green-50);
+		}
+
+		.form-radio__label {
+			font-size: $font-body-small;
+		}
+	}
+
 	@include break-medium {
 		gap: 1rem;
 	}
