Revert "Comments: Allow Filtering Replied Comments (#86876)"
This reverts commit ba25834ffd28406ad57d9df6ae1579f53f6852ca.

--- a/client/my-sites/comments/style.scss
+++ b/client/my-sites/comments/style.scss
@@ -9,8 +9,10 @@
 		}
 
 		.comment-navigation__open-bulk {
-			justify-content: center;
-			padding-top: 0;
+			padding-top: 9px;
+			position: absolute;
+			right: 0;
+			top: 0;
 		}
 	}
 }
@@ -69,14 +71,6 @@
 		.gridicon {
 			top: 4px;
 		}
-	}
-}
-
-.comment-navigation__unreplied-comments.form-fieldset {
-	margin: 12px;
-
-	.form-label {
-		margin: 0;
 	}
 }
 
