Improve passwordless invite form

--- a/client/blocks/signup-form/style.scss
+++ b/client/blocks/signup-form/style.scss
@@ -1,6 +1,10 @@
 @import "calypso/components/text-control/style.scss";
 @import "@wordpress/base-styles/breakpoints";
 @import "@wordpress/base-styles/mixins";
+@import "@automattic/typography/styles/variables";
+
+$recoleta-font-family: "Recoleta", sans-serif;
+$font-sf-pro-text: "SF Pro Text", $sans;
 
 .signup-form .signup-form__input.form-text-input {
 	margin-bottom: 20px;
@@ -25,7 +29,7 @@
 .signup-form__terms-of-service-link {
 	font-size: $font-body-extra-small;
 	margin: 0 0 20px;
-	text-align: center;
+	text-align: left;
 
 	a {
 		@include breakpoint-deprecated(">480px") {
@@ -67,20 +71,96 @@
 	text-decoration: underline;
 }
 
-.signup-form__passwordless-form-wrapper {
+.is-section-accept-invite .signup-form__passwordless-form-wrapper {
+	width: 100%;
+	margin: 0 auto;
+	@media (min-width: $break-small) {
+		width: 372px;
+	}
+	font-family: $font-sf-pro-text;
+	.card.logged-out-form {
+		background-color: transparent;
+		box-shadow: none;
+		max-width: 372px;
+		margin: 0 auto;
+		padding: 16px;
+		@media (min-width: $break-small) {
+			padding: 0;
+		}
+		button.is-primary {
+			border-radius: 2px;
+			border: 1px solid #3858e9;
+			background: #3858e9;
+			height: 48px;
+			font-weight: 500;
+		}
+		.signup-form__passwordless-invite-title {
+			color: #101517;
+			text-align: center;
+			font-family: $recoleta-font-family;
+			font-size: 2rem;
+			font-weight: 400;
+			line-height: normal;
+			letter-spacing: 0.2px;
+		}
+		label {
+			color: #2c3338;
+			text-align: center;
+			font-size: 1rem;
+			font-weight: 400;
+			line-height: 24px;
+		}
+		.signup-form__passwordless-email-label {
+			margin: 24px 0 8px 0;
+			.form-label {
+				text-align: left;
+				font-size: rem(14px);
+				font-weight: 500;
+			}
+		}
+		.form-fieldset {
+			margin-bottom: 0;
+		}
+	}
 	.signup-form__terms-of-service-link {
-		margin: 4px 0;
+		margin: 0;
+		color: #646970;
+		font-size: rem(14px);
+		line-height: 20px;
+		a {
+			color: #2c3338;
+			font-style: normal;
+			text-decoration-line: underline;
+		}
 	}
 
 	.logged-out-form__footer {
-		margin-top: 0;
+		margin: 16px 0 16px 0;
+		padding: 0;
 	}
 
-	.validation-fieldset__validation-message {
-		min-height: auto;
+}
+.validation-fieldset__validation-message {
+	min-height: auto;
+}
+.logged-out-form__links {
+	max-width: 100%;
+	margin: 0;
+	&::before {
+		content: "";
+		margin: 0;
+	}
+	.logged-out-form__link-item {
+		color: #1d2327;
+		font-weight: 500;
+		text-underline-offset: 4px;
+		margin-top: 32px;
+		padding: 0;
+		&:hover {
+			color: #1d2327;
+		}
 	}
 }
-
 .signup-form__recaptcha-tos {
 	display: none;
 	padding: 20px 10px 10px;
@@ -139,6 +219,16 @@
 
 body.is-section-signup,
 body.is-section-accept-invite {
+	background: #fdfdfd;
+	.invite-accept {
+		margin-top: 50px;
+		@media (min-width: $break-small) {
+			margin-top: 150px;
+		}
+	}
+	.layout__content {
+		padding: 24px;
+	}
 	.signup__step.is-user-social,
 	// ::::: Onboarding_PM_Passwordless_Experiment ::::::
 	// This selector is part of an experiment which is supposed to be cleaned up
