--- a/client/my-sites/invites/invite-accept/style.scss
+++ b/client/my-sites/invites/invite-accept/style.scss
@@ -1,3 +1,4 @@
+@import "@wordpress/base-styles/breakpoints";
 
 .invite-accept .locale-suggestions {
 	margin-top: 0;
@@ -14,4 +15,15 @@
 
 .invite-accept .notice__text {
 	word-wrap: break-word;
+}
+.is-section-accept-invite .invite-accept {
+	margin-top: 50px;
+	@media (min-width: $break-small) {
+		margin-top: 150px;
+	}
+}
+.is-section-accept-invite {
+	.layout__content {
+		padding: 24px;
+	}
 }
