License selector style tweaks

--- a/client/jetpack-cloud/sections/manage/pricing/pricing-license-selector/style.scss
+++ b/client/jetpack-cloud/sections/manage/pricing/pricing-license-selector/style.scss
@@ -1,7 +1,6 @@
 .pricing-license-selector-wrapper {
 	display: flex;
 	width: 100%;
-	height: 72px;
 	background: rgba(255, 255, 255, 0.84);
 	position: sticky;
 	top: 0;
@@ -11,23 +10,25 @@
 	.pricing-license-selector {
 		display: flex;
 		align-items: center;
+		justify-content: space-evenly;
 		background: #f4f4f4;
 		border-radius: 8px; /* stylelint-disable-line scales/radii */
 		width: 682px;
-		height: 30px;
 		margin: 20px auto;
-		padding: 1px 2px;
+		padding: 2px 2px;
 		flex-wrap: nowrap;
 		overflow: auto;
 	}
 
 	.pricing-license-option-outer {
 		justify-content: center; /* Centers the inner div horizontally */
-		align-items: center; /* Centers the inner div vertically */
 		display: flex;
 		flex: 0 0 auto;
 		width: 113px;
-		height: 30px;
+		height: 100%;
+		min-height: 30px;
+		// margin: 5px 0;
+		// overflow: hidden;
 
 		.pricing-license-option {
 			padding: 5px 0;
