fix: mobile imag height

--- a/client/me/developer/style.scss
+++ b/client/me/developer/style.scss
@@ -139,7 +139,8 @@
 
 		.developer-survey-notice__popup-img {
 			background: #0675c4;
-			height: 241px;
+			padding-bottom: 57.9%;
+			height: 0;
 
 			img {
 				width: 100%;
